<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SMART CUBE</string>
    <string name="title_activity_menu_detail">menu_detail</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About Us</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_login">Không thể đăng nhập</string>
    <string name="open_gps">GPS Mode</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_version">v0.3.4.6</string>
    <string name="tvApSsidTitle">SSID: </string>
    <string name="tvPasswordTitle">Mật khẩu: </string>
    <string name="switchIsSsidHiddenTitle">SSID is Hidden</string>
    <string name="spinnerTaskResultCountTitle">Tác vụ kết quả đếm</string>
    <string name="btnConfirmTitle">Xác nhận</string>
    <string name="title_activity_maps">Map</string>
    <string name="Car_protection">Chế độ bảo vệ xe</string>
    <string name="Light_control">Đèn</string>
    <string name="anti_theif">Chống trộm</string>
    <string name="title_control">Điều khiển</string>
    <string name="title_esp">Cấu hình thông minh</string>
    <string name="title_map">Vị trí</string>
</resources>
