<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Communicate">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_connect"
                android:icon="@drawable/icon_connect"
                android:title="@string/title_control" />

            <item
                android:id="@+id/nav_smart_config"
                android:icon="@drawable/config"
                android:title="@string/title_esp" />
            </group>

        </menu>
    </item>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/map"
            android:title="@string/title_map" />
        <!--<item-->
            <!--android:id="@+id/nav_gallery"-->
            <!--android:icon="@drawable/ic_menu_gallery"-->
            <!--android:title="Gallery" />-->
        <!--<item-->
            <!--android:id="@+id/nav_slideshow"-->
            <!--android:icon="@drawable/ic_menu_slideshow"-->
            <!--android:title="Music" />-->
        <!--<item-->
            <!--android:id="@+id/nav_manage"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="Control" />-->
    </group>



</menu>
