<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/Orange_layout"
    >
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="150dp"
    android:src="@drawable/config_layout"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="SmartConfig ESP8266"
        android:textColor="@color/White"
        android:textSize="@dimen/smart_config_big"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvApSsid"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tvApSsidTitle"
            android:textSize="@dimen/smart_config"
            android:textColor="@color/White"/>

        <TextView
            android:id="@+id/tvApSssidConnected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/smart_config"
            android:textColor="@color/White"
            android:ems="10"
            android:singleLine="true" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvApPassword"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tvPasswordTitle"
            android:textSize="@dimen/smart_config"
            android:textColor="@color/White"/>

        <EditText
            android:id="@+id/edtApPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/White"
            android:ems="10"
            android:inputType="text"
            android:singleLine="true"
            android:text=""
            tools:ignore="TextFields" >

        </EditText>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp" 
        android:gravity="center_vertical"
        android:orientation="horizontal" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spinnerTaskResultCountTitle"
            android:textSize="@dimen/smart_config"
            android:textColor="@color/White"/>
        
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        
        <Spinner
            android:id="@+id/spinnerTaskResultCount"
            android:backgroundTint="@color/White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp" 
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_btn"
            android:text="@string/btnConfirmTitle"
            android:textSize="24sp" />



    </LinearLayout>

</LinearLayout>